modifiqué fotos en cards

--- a/index.html
+++ b/index.html
@@ -98,19 +98,29 @@
                         <h2>Testimonios</h2>
                     </div>
                 </div>
-                <div id="fotos" class="col-12 col-md-4 text-center">
-                    <img class="fotoTurista" src="turist1.jpg">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor.</p>
+                <div class="col-12 col-md-4 text-center">
+                    <div class="card">
+                        <img class="card-img-top" src="turist1.jpg">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                    </div>
                 </div>
                 <div id="fotos" class="col-12 col-md-4 text-center">
-                    <img class="fotoTurista" src="turist2.jpg">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor.</p>
-
+                    <div class="card">
+                        <img class="card-img-top" src="turist2.jpg">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                    </div>
                 </div>
                 <div id="fotos" class="col-12 col-md-4 text-center">
-                    <img class="fotoTurista" src="turist3.jpg">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor.</p>
-
+                    <div class="card">
+                        <img class="card-img-top" src="turist3.jpg">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
